--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -48,6 +48,30 @@
     <li class="">Financial Aid</li>
     <li class="">Student Services</li>
   </section>
+
+  <div class="current-Schedule">
+    <h4 class="">CSET 105, M, 12:00pm - 4:30pm</h4>
+    <h1 class="">Intro to Web Application</h1>
+
+    <h4 class="">CSET 110, T, 12:00pm - 4:30pm &amp; W, 12:30pm - 4:30pm</h4>
+    <h1 class="">Web Development I</h1>
+
+    <h4 class="">CSET 115, R, 12:00pm - 4:30pm</h4>
+    <h1 class="">Technical Requirements &amp; Data Structures</h1>
+
+    <h4 class="">CSET 120, F, 12:00pm - 4:30pm</h4>
+    <h1 class="">Software Project I/Open Lab</h1>
+
+    <h4 class="">ENGL 100, M &amp; W, 8am - 9:30am</h4>
+    <h1 class="">English Composition</h1>
+
+    <h4 class="">MATH 100, T &amp; R, 8am - 9:30pm</h4>
+    <h1 class="">College Algebra</h1>
+  </div>
+
+  <div class="view-As">
+    <p>View As: List</p><span>|</span><p>Calender</p>
+
     <script src="javascript/counter.js" type="text/javascript"></script>
 </body>
 </html>
