3 humpback whales have been harpooned

--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -7,7 +7,7 @@
   <title>Current Schedule</title>
 </head>
 <body>
-  <section class="desktop-background">
+  <section class="desktop-Background">
     <header class="">
       <h4 class=""></h4>
       <h4 class="">Home</h4>
@@ -15,7 +15,7 @@
       <div class="rectangle-Header"></div>
     </header>
     <section class="hero-Content">
-      <div class="current program">
+      <div class="current-Program">
       <h4 class="">Current Program:</div>
         <h1 class="">Computer Software Engineering Technology</h1>
       </div>
