Finished the HTML.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
   <!-- a section is going to be used to give the white background around the bodies background-->
@@ -54,8 +54,48 @@
         <li class="">Student Services</li>
       </ul>
     </section>
-
+    <!-- This section comprises of the program announcements and due dates in the top part of the scrolling section. -->
+    <section class="scrolling-Content">
+      <h4 class="">Program Announcements:</h4>
+        <div class="program-Announcements">
+          <h1 class="">Industry Panel: Friday, 1pm</h1>
+          <p class="">Students should arrive to the auditorium by 12:45pm, with questions prepared to ask the panel.</p>
+        </div>
+        <!-- The h4 classes seperate each of the sections making it easier to make them side by side in css-->
+        <h4 class="">Upcoming Due Dates:</h4>
+        <div class="upcoming-Due-Dates">
+          <h4 class="">11/15</h4>
+          <h1 class="">Web Development I: JavaScript Fundamentals Test</h1>
+          <h4 class="">12/15</h4>
+          <h1 class="">Software Project I: Final Project due by 11:55pm EST</h1>
+        </div>
+        <div class="page-break"></div>
+        <!-- College announcements focuses on the left side content after the page break. each side after the page break are sperated by divs. -->
+        <h4 class="">College Announcements</h4>
+        <div class="college-Announcements">
+          <h1 class="">Tutoring Available</h1>
+          <p class="">Students may request free tutoring support in general education and program related courses at the Student Academic Center. Email <a href="tutoring@stevenscollege.edu" target="_blank">tutoring@stevenscollege.edu</a> to reserve a timeslot.</p>
+          <h1 class="">Internship Workshops</h1>
+          <p class="">Learn how to register for & utilize our college central netowrk to connect with job and internship opportunities. We’ll also provide you resources to connect with companies in your hometown for summer internships. RSVP by emailing <a href="tutoring@stevenscollege.edu" target="_blank">internships@stevenscollege.edu</a>.
+        </div>
+        <!-- The next section are events listed in order but aren't required to use any li. -->
+        <h4 class="">Upcoming Events</h4>
+        <div class="upcoming-Events">
+          <h4 class="">11/15, 3:00pm</h4>
+          <h1 class="">Math Study Group></h1>
+          <h4 class="">11/15, 7:00pm</h4>
+          <h1 class="">Intermual Dodgeball></h1>
+          <h4 class="">11/15, 9:00pm</h4>
+          <h1 class="">Movie Night></h1>
+          <h4 class="">11/16, 8:00am</h4>
+          <h1 class="">Coffee Talkp></h1>
+          <h4 class="">11/16, 7:00pm</h4>
+          <h1 class="">Intermural Dodgeball></h1>
+          <h4 class="">11/16, 9:00pm</h4>
+          <h1 class="">Movie Night></h1>
+        </div>
+      </section>
   </section>
-  <script src="javascript/counter.js" type="text/javascript"></script>
+  <script src="" type="text/javascript"></script>
 </body>
 </html>
