made header.scss file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- The empty h4 is for the current date through javascript.-->
     <h4 class=""></h4>
     <h4 class="">Home</h4>
+    <!--Javascript date will go below-->
+    <h4 class="">Date</h4>
     <h4 class="">Log Out?</h4>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
     <div class="page-Breaks"></div>
@@ -25,7 +27,7 @@
       <h1 class="">Computer Software Engineering Technology></h1>
     </div>
     <div class="current-Semester">
-      <h4 class="">Current Semester:></h4>
+      <h4 class="">Current Semester:</h4>
       <h1 class="">Fall 2017</h1>
     </div>
     <div class="enrolled-Credit-Hours">
