Finished more HTML that is page specific

--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -50,6 +50,8 @@
   </section>
 
   <div class="current-Schedule">
+    <h1 class="">Current Schedule:</h1>
+
     <h4 class="">CSET 105, M, 12:00pm - 4:30pm</h4>
     <h1 class="">Intro to Web Application</h1>
 
@@ -71,6 +73,70 @@
 
   <div class="view-As">
     <p>View As: List</p><span>|</span><p>Calender</p>
+  </div>
+
+  <section class="current-Schedule-Calender">
+    <div class="monday">
+      <h1 class="">Monday</h1>
+
+      <div class="eng-101">
+      <h4 class="">ENGL 101, 8:30 - 9:30AM</h4>
+      <h2 class="">English Compostion</h2>
+    </div>
+
+      <div class="cset-105">
+        <h4 class="">CSET 105, 12:00 - 4:30PM</h4>
+        <h2 class="">Intro to Web Applications</h2>
+      </div>
+    </div>
+
+    <div class="tuesday">
+      <h1 class="">Tuesday</h1>
+
+      <div class="math-100">
+      <h4 class="">MATH 100, 8:00 - 9:30AM</h4>
+      <h2 class="">College Algebra</h2>
+    </div>
+
+      <div class="cset-110">
+        <h4 class="">CSET 110, 12:00 - 4:30PM</h4>
+        <h2 class="">Web Development 1</h2>
+      </div>
+
+      <div class="wednesday">
+        <h1 class="">Wednesday</h1>
+
+        <div class="eng-101">
+        <h4 class="">ENGL 101, 8:30 - 9:30AM</h4>
+        <h2 class="">English Compostion</h2>
+      </div>
+
+        <div class="cset-110">
+          <h4 class="">CSET 110, 12:00 - 4:30PM</h4>
+          <h2 class="">Web Development 1</h2>
+        </div>
+
+        <div class="thursday">
+          <h1 class="">Thursday</h1>
+
+          <div class="math-100">
+          <h4 class="">MATH 100, 8:00 - 9:30AM</h4>
+          <h2 class="">College Algebra</h2>
+        </div>
+
+        <div class="cset-115">
+          <h4 class="">CSET 115, 12:00 - 4:30PM</h4>
+          <h2 class="">Technical Requirements &amp; Data Structures</h2>
+        </div>
+
+        <div class="friday">
+          <h1 class="">Friday</h1>
+
+        <div class="cset-120">
+          <h4 class="">CSET 120, 12:00 - 4:30PM</h4>
+          <h2 class="">Software Project 1 Open Lab</h2>
+        </div>
+    </div>
 
     <script src="javascript/counter.js" type="text/javascript"></script>
 </body>
