--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
-  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <!-- a section is going to be used to give the white background around the bodies background-->
   <section class="desktop-background">
     <!-- A header is used for the home name -->
   <header class="">
+
+    <h4 class="home-Header">Home</h4>
     <!-- The empty h4 is for the current date through javascript.-->
-    <h4 class=""></h4>
-    <h4 class="">Home</h4>
-    <!--Javascript date will go below-->
-    <h4 class="">Date</h4>
-    <h4 class="">Log Out?</h4>
+    <h4 class="todays-Date">Date</h4>
+    <h4 class="log-Out">Log Out?</h4>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
     <div class="page-Breaks"></div>
   </header>
@@ -78,7 +77,7 @@
           <h1 class="">Tutoring Available</h1>
           <p class="">Students may request free tutoring support in general education and program related courses at the Student Academic Center. Email <a href="tutoring@stevenscollege.edu" target="_blank">tutoring@stevenscollege.edu</a> to reserve a timeslot.</p>
           <h1 class="">Internship Workshops</h1>
-          <p class="">Learn how to register for & utilize our college central netowrk to connect with job and internship opportunities. We’ll also provide you resources to connect with companies in your hometown for summer internships. RSVP by emailing <a href="tutoring@stevenscollege.edu" target="_blank">internships@stevenscollege.edu</a>.
+          <p class="">Learn how to register for &amp; utilize our college central netowrk to connect with job and internship opportunities. We’ll also provide you resources to connect with companies in your hometown for summer internships. RSVP by emailing <a href="tutoring@stevenscollege.edu" target="_blank">internships@stevenscollege.edu</a>.
         </div>
         <!-- The next section are events listed in order but aren't required to use any li. -->
         <h4 class="">Upcoming Events</h4>
