Fixed some tags and some ampersands.

--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -16,7 +16,7 @@
     </header>
     <section class="hero-Content">
       <div class="current-Program">
-        <h4 class="">Current Program:</div>
+        <h4 class="">Current Program:</h4>
           <h1 class="">Computer Software Engineering Technology</h1>
         </div>
         <div class="current-Semester">
@@ -34,7 +34,7 @@
         <div class="page-Breaks"></div>
       </section>
 
-      <section class="aside">
+      <aside class="aside">
         <h1 class="">Benedict Cumberbatch</h1>
         <h5 class="">Academic Services</h5>
         <ul>
@@ -47,7 +47,8 @@
           <li class="">College Calender</li>
           <li class="">Financial Aid</li>
           <li class="">Student Services</li>
-        </section>
+        </ul>
+        </aside>
 
         <div class="current-Schedule">
           <h1 class="">Current Schedule:</h1>
@@ -102,6 +103,7 @@
               <h4 class="">CSET 110, 12:00 - 4:30PM</h4>
               <h2 class="">Web Development 1</h2>
             </div>
+          </div>
 
             <div class="wednesday">
               <h1 class="">Wednesday</h1>
@@ -115,6 +117,7 @@
                 <h4 class="">CSET 110, 12:00 - 4:30PM</h4>
                 <h2 class="">Web Development 1</h2>
               </div>
+            </div>
 
               <div class="thursday">
                 <h1 class="">Thursday</h1>
@@ -128,6 +131,7 @@
                   <h4 class="">CSET 115, 12:00 - 4:30PM</h4>
                   <h2 class="">Technical Requirements &amp; Data Structures</h2>
                 </div>
+              </div>
 
                 <div class="friday">
                   <h1 class="">Friday</h1>
@@ -138,6 +142,7 @@
                   </div>
                 </div>
               </section>
+            </section>
 
               <script src="javascript/counter.js" type="text/javascript"></script>
             </body>
