--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -7,5 +7,66 @@
   <title>Upcoming Courses</title>
 </head>
 <body>
-</body>
-</html>
+  <section class="desktop-Background">
+    <header class="">
+      <h4 class=""></h4>
+      <h4 class="">Home</h4>
+      <h4 class="">Logout</h4>
+      <div class="rectangle-Header"></div>
+    </header>
+    <section class="hero-Content">
+      <div class="current-Program">
+        <h4 class="">Current Program:</div>
+          <h1 class="">Computer Software Engineering Technology</h1>
+        </div>
+        <div class="current-Semester">
+          <h4 class="">Current Semester:</h4>
+          <h1 class="">Fall 2017</h1>
+        </div>
+        <div class="enrolled-Credit-Hours">
+          <h4 class="">Enrolled Credit Hours:</h4>
+          <h1 class="">15</h1>
+        </div>
+        <div class="academic-Standing">
+          <h4 class="">Academic Standing</h4>
+          <h1 class="">Good</h1>
+        </div>
+        <div class="page-Breaks"></div>
+      </section>
+
+      <aside class="aside">
+        <h1 class="">Benedict Cumberbatch</h1>
+        <h5 class="">Academic Services</h5>
+        <ul>
+          <li class="">Current Schedule</li>
+          <li class="">Grades &amp; Reporting</li>
+          <li class="">Upcoming Courses</li>
+        </ul>
+        <h5 class="">College Information</h5>
+        <ul>
+          <li class="">College Calender</li>
+          <li class="">Financial Aid</li>
+          <li class="">Student Services</li>
+        </aside>
+
+        <div class="upcoming-Courses">
+          <h1 class="">Upcoming Courses:</h1>
+        </div>
+        <div class="semester">
+          <p>Semester:</p><p>Spring 2018</p>
+        </div>
+
+        <section class="no-Classes-Registered">
+          <div class="white-Box">
+            <div class="">
+              <h4 class="">YOU CURRENTLY HAVE NO REGISTERED COURSES</h4>
+              <h1 class="">Register For Spring Courses.</h1>
+            </div>
+            <div class="start-Button">
+              <button>START</button>
+            </div>
+          </div>
+          
+          <script src="javascript/counter.js" type="text/javascript"></script>
+        </body>
+        </html>
