--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h1 class="">Tutoring Available</h1>
         <p class="">Students may request free tutoring support in general education and program related courses at the Student Academic Center. Email <a href="tutoring@stevenscollege.edu" target="_blank">tutoring@stevenscollege.edu</a> to reserve a timeslot.</p>
         <h1 class="">Internship Workshops</h1>
-        <p class="">Learn how to register for & utilize our college central netowrk to connect with job and internship opportunities. We’ll also provide you resources to connect with companies in your hometown for summer internships. RSVP by emailing <a href="tutoring@stevenscollege.edu" target="_blank">internships@stevenscollege.edu</a>.
+        <p class="">Learn how to register for &amp; utilize our college central netowrk to connect with job and internship opportunities. We’ll also provide you resources to connect with companies in your hometown for summer internships. RSVP by emailing <a href="tutoring@stevenscollege.edu" target="_blank">internships@stevenscollege.edu</a>.
         </div>
         <!-- The next section are events listed in order but aren't required to use any li. -->
         <h4 class="">Upcoming Events</h4>
