--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -66,7 +66,8 @@
               <button>START</button>
             </div>
           </div>
-          
+        </section>
+      </section>
           <script src="javascript/counter.js" type="text/javascript"></script>
         </body>
         </html>
