Completed the Grades&Reporting page of the website.

--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
-  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.cs">
 </head>
 <body>
   <!-- a section is going to be used to give the white background around the bodies background-->
@@ -12,7 +12,7 @@
     <header class="">
       <!-- The empty h4 is for the current date through javascript.-->
       <h4 class=""></h4>
-      <h4 class="">Home</h4>
+      <h4 class="">Home/Grades&amp;Reporting</h4>
       <!--Javascript date will go below-->
       <h4 class="">Date</h4>
       <h4 class="">Log Out?</h4>
@@ -41,7 +41,7 @@
       <div class="page-Breaks"></div>
     </section>
     <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
-    <section class="aside">
+    <aside class="">
       <h1 class="">Benedic Cumberbatch</h1>
       <h5 class="">Academic Services></h5>
       <ul>
@@ -55,6 +55,251 @@
         <li class="">Financial Aid</li>
         <li class="">Student Services</li>
       </ul>
+    </aside>
+
+    <section class="scrolling-Content">
+      <!-- This section consists of the course information -->
+        <!-- Half of this page is connected to a div container so they are easy to seperate -->
+        <div class="">
+          <h4 class="">Enrolled Courses:</h4>
+          <h4 class="">CSET 105, M, 12:00pm - 4:30pm</h4>
+          <h1 class="">Into to Web Applications</h1>
+          <!-- The grade is given a white background to work inside of -->
+          <div class="grade-Background">
+            <div class="grade-Circle">
+              <div class="">
+                <h1 class="grade-Complete">40%</h1>
+                <p class=""> of class completed</p>
+              </div>
+            </div>
+          </div>
+          <!-- More divs are used inside of the white box to  -->
+          <div class="">
+            <h6 class="">Start Date:</h6>
+            <p class="">August 20, 2017</p>
+          </div>
+          <div class="">
+            <h6 class="">End Date:</h6>
+            <p class="">December 15, 2017</p>
+          </div>
+
+          <h4 class="">CSET 120, T&amp;W, 12:00pm - 4:30pm</h4>
+          <h1 class="">Software Project I</h1>
+          <!-- The grade is given a white background to work inside of -->
+          <div class="grade-Background">
+            <div class="grade-Circle">
+              <div class="">
+                <h1 class="grade-Complete">40%</h1>
+                <p class=""> of class completed</p>
+              </div>
+            </div>
+          </div>
+          <!-- More divs are used inside of the white box to  -->
+          <div class="">
+            <h6 class="">Start Date:</h6>
+            <p class="">August 20, 2017</p>
+          </div>
+          <div class="">
+            <h6 class="">End Date:</h6>
+            <p class="">December 15, 2017</p>
+          </div>
+
+          <h4 class="">CSET 115, TH, 12:00pm - 4:30pm</h4>
+          <h1 class="">Technical Requirements and DataStructures</h1>
+          <!-- The grade is given a white background to work inside of -->
+          <div class="grade-Background">
+            <div class="grade-Circle">
+              <div class="">
+                <h1 class="grade-Complete">40%</h1>
+                <p class=""> of class completed</p>
+              </div>
+            </div>
+          </div>
+          <!-- More divs are used inside of the white box to  -->
+          <div class="">
+            <h6 class="">Start Date:</h6>
+            <p class="">August 20, 2017</p>
+          </div>
+          <div class="">
+            <h6 class="">End Date:</h6>
+            <p class="">December 15, 2017</p>
+          </div>
+
+          <h4 class="">CSET 110, F, 12:00pm - 4:30pm</h4>
+          <h1 class="">Web Development I</h1>
+          <!-- The grade is given a white background to work inside of -->
+          <div class="grade-Background">
+            <div class="grade-Circle">
+              <div class="">
+                <h1 class="grade-Complete">40%</h1>
+                <p class=""> of class completed</p>
+              </div>
+            </div>
+          </div>
+          <!-- More divs are used inside of the white box to  -->
+          <div class="">
+            <h6 class="">Start Date:</h6>
+            <p class="">August 20, 2017</p>
+          </div>
+          <div class="">
+            <h6 class="">End Date:</h6>
+            <p class="">December 15, 2017</p>
+          </div>
+
+          <h4 class="">MATH 137 K, T&amp;TH, 8:00am - 9:20am</h4>
+          <h1 class="">Intermediate Algebra</h1>
+          <!-- The grade is given a white background to work inside of -->
+          <div class="grade-Background">
+            <div class="grade-Circle">
+              <div class="">
+                <h1 class="grade-Complete">40%</h1>
+                <p class=""> of class completed</p>
+              </div>
+            </div>
+          </div>
+          <!-- More divs are used inside of the white box to  -->
+          <div class="">
+            <h6 class="">Start Date:</h6>
+            <p class="">August 20, 2017</p>
+          </div>
+          <div class="">
+            <h6 class="">End Date:</h6>
+            <p class="">December 15, 2017</p>
+          </div>
+
+          <h4 class="">ENG 106 J, T&amp;TH, 9:30am - 10:50am</h4>
+          <h1 class="">Into to Web Applications</h1>
+          <!-- The grade is given a white background to work inside of -->
+          <div class="grade-Background">
+            <div class="grade-Circle">
+              <div class="">
+                <h1 class="grade-Complete">40%</h1>
+                <p class=""> of class completed</p>
+              </div>
+            </div>
+          </div>
+          <!-- More divs are used inside of the white box to  -->
+          <div class="">
+            <h6 class="">Start Date:</h6>
+            <p class="">August 20, 2017</p>
+          </div>
+          <div class="">
+            <h6 class="">End Date:</h6>
+            <p class="">December 15, 2017</p>
+          </div>
+        </div>
+        <!-- Here starts the second half of the scrolling section. -->
+        <div class="">
+          <div class="grade-Percent-Background">
+            <h6 class="">Current Percent:</h6>
+            <!-- This h1 has to be calculated in JavaScript -->
+            <h1 class="grade-Percent">%</h1>
+          </div>
+          <h6 class="">Recently Graded</h6>
+          <!-- The divs here seperate the titles and percentages -->
+          <div class="">
+            <h6 class="">HTML &amp; CSS #2 project</h6>
+            <h6 class="">CSS Test</h6>
+            <h6 class="">Tech Talk #2</h6>
+          </div>
+          <div class="">
+            <h6 class="">90%</h6>
+            <h6 class="">85%</h6>
+            <h6 class="">100%</h6>
+          </div>
+
+          <div class="grade-Percent-Background">
+            <h6 class="">Current Percent:</h6>
+            <!-- This h1 has to be calculated in JavaScript -->
+            <h1 class="grade-Percent">%</h1>
+          </div>
+          <h6 class="">Recently Graded</h6>
+          <!-- The divs here seperate the titles and percentages -->
+          <div class="">
+            <h6 class="">HTML &amp; CSS #2 project</h6>
+            <h6 class="">CSS Test</h6>
+            <h6 class="">Tech Talk #2</h6>
+          </div>
+          <div class="">
+            <h6 class="">90%</h6>
+            <h6 class="">85%</h6>
+            <h6 class="">100%</h6>
+          </div>
+
+          <div class="grade-Percent-Background">
+            <h6 class="">Current Percent:</h6>
+            <!-- This h1 has to be calculated in JavaScript -->
+            <h1 class="grade-Percent">%</h1>
+          </div>
+          <h6 class="">Recently Graded</h6>
+          <!-- The divs here seperate the titles and percentages -->
+          <div class="">
+            <h6 class="">HTML &amp; CSS #2 project</h6>
+            <h6 class="">CSS Test</h6>
+            <h6 class="">Tech Talk #2</h6>
+          </div>
+          <div class="">
+            <h6 class="">90%</h6>
+            <h6 class="">85%</h6>
+            <h6 class="">100%</h6>
+          </div>
+
+          <div class="grade-Percent-Background">
+            <h6 class="">Current Percent:</h6>
+            <!-- This h1 has to be calculated in JavaScript -->
+            <h1 class="grade-Percent">%</h1>
+          </div>
+          <h6 class="">Recently Graded</h6>
+          <!-- The divs here seperate the titles and percentages -->
+          <div class="">
+            <h6 class="">HTML &amp; CSS #2 project</h6>
+            <h6 class="">CSS Test</h6>
+            <h6 class="">Tech Talk #2</h6>
+          </div>
+          <div class="">
+            <h6 class="">90%</h6>
+            <h6 class="">85%</h6>
+            <h6 class="">100%</h6>
+          </div>
+
+          <div class="grade-Percent-Background">
+            <h6 class="">Current Percent:</h6>
+            <!-- This h1 has to be calculated in JavaScript -->
+            <h1 class="grade-Percent">%</h1>
+          </div>
+          <h6 class="">Recently Graded</h6>
+          <!-- The divs here seperate the titles and percentages -->
+          <div class="">
+            <h6 class="">HTML &amp; CSS #2 project</h6>
+            <h6 class="">CSS Test</h6>
+            <h6 class="">Tech Talk #2</h6>
+          </div>
+          <div class="">
+            <h6 class="">90%</h6>
+            <h6 class="">85%</h6>
+            <h6 class="">100%</h6>
+          </div>
+
+          <div class="grade-Percent-Background">
+            <h6 class="">Current Percent:</h6>
+            <!-- This h1 has to be calculated in JavaScript -->
+            <h1 class="grade-Percent">%</h1>
+          </div>
+          <h6 class="">Recently Graded</h6>
+          <!-- The divs here seperate the titles and percentages -->
+          <div class="">
+            <h6 class="">HTML &amp; CSS #2 project</h6>
+            <h6 class="">CSS Test</h6>
+            <h6 class="">Tech Talk #2</h6>
+          </div>
+          <div class="">
+            <h6 class="">90%</h6>
+            <h6 class="">85%</h6>
+            <h6 class="">100%</h6>
+          </div>
+        </div>
+      </section>
+
     </section>
   </section>
   <script src="" type="text/javascript"></script>
