--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <section class="desktop-background">
     <!-- A header is used for the home name -->
 
-  <header class="">
+  <header class="body-Header">
 
     <h4 class="home-Header">Home</h4>
     <!-- The empty h4 is for the current date through javascript.-->
-    <h4 class="todays-Date">Date</h4>
-    <h4 class="log-Out">Log Out?</h4>
+    <ul class="date-Log-Out">
+    <li>Date</li>
+    <li>Log Out?</li>
+    </ul>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
     <div class="page-Breaks"></div>
   </header>
@@ -66,6 +68,8 @@
           <p class="">Students should arrive to the auditorium by 12:45pm, with questions prepared to ask the panel.</p>
         </div>
         <!-- The h4 classes seperate each of the sections making it easier to make them side by side in css-->
+
+          <div class="page-Breaks"></div>
         <h4 class="">Upcoming Due Dates:</h4>
         <div class="upcoming-Due-Dates">
           <h4 class="">11/15</h4>
@@ -87,17 +91,17 @@
         <h4 class="">Upcoming Events</h4>
         <div class="upcoming-Events">
           <h4 class="">11/15, 3:00pm</h4>
-          <h1 class="">Math Study Group></h1>
+          <h1 class="">Math Study Group</h1>
           <h4 class="">11/15, 7:00pm</h4>
-          <h1 class="">Intermual Dodgeball></h1>
+          <h1 class="">Intermual Dodgeball</h1>
           <h4 class="">11/15, 9:00pm</h4>
-          <h1 class="">Movie Night></h1>
+          <h1 class="">Movie Night</h1>
           <h4 class="">11/16, 8:00am</h4>
-          <h1 class="">Coffee Talkp></h1>
+          <h1 class="">Coffee Talkp</h1>
           <h4 class="">11/16, 7:00pm</h4>
-          <h1 class="">Intermural Dodgeball></h1>
+          <h1 class="">Intermural Dodgeball</h1>
           <h4 class="">11/16, 9:00pm</h4>
-          <h1 class="">Movie Night></h1>
+          <h1 class="">Movie Night</h1>
         </div>
       </section>
     </section>
