Changed the name of the href to the proper titling to connect the CSS file to the HTML.

--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style/style.css" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   <title>Current Schedule</title>
 </head>
@@ -10,7 +10,7 @@
   <section class="desktop-Background">
     <header class="">
       <h4 class=""></h4>
-      <h4 class="">Home</h4>
+      <h4 class="">Home/Current Schedule</h4>
       <h4 class="">Logout</h4>
       <div class="rectangle-Header"></div>
     </header>
