--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
-  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <!-- a section is going to be used to give the white background around the bodies background-->
