--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style/style.css" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   <title>Upcoming Courses</title>
 </head>
