Quarter way point commit. Got to a point where the white box div encompasses a large portion of the modular part of the webpage. The selections for one of the option menus is complete with the commenting to later come back to to further develop after a content fill.

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -10,64 +10,110 @@
   <section class="desktop-Background">
     <header class="">
       <h4 class=""></h4>
-      <h4 class="">Home</h4>
+      <h4 class="">Home/Upcoming Courses</h4>
       <h4 class="">Logout</h4>
       <div class="rectangle-Header"></div>
     </header>
     <section class="hero-Content">
       <div class="current-Program">
-        <h4 class="">Current Program:</div>
-          <h1 class="">Computer Software Engineering Technology</h1>
-        </div>
-        <div class="current-Semester">
-          <h4 class="">Current Semester:</h4>
-          <h1 class="">Fall 2017</h1>
-        </div>
-        <div class="enrolled-Credit-Hours">
-          <h4 class="">Enrolled Credit Hours:</h4>
-          <h1 class="">15</h1>
-        </div>
-        <div class="academic-Standing">
-          <h4 class="">Academic Standing</h4>
-          <h1 class="">Good</h1>
-        </div>
-        <div class="page-Breaks"></div>
-      </section>
+        <h4 class="">Current Program:</h4></div>
+        <h1 class="">Computer Software Engineering Technology</h1>
+      </div>
+      <div class="current-Semester">
+        <h4 class="">Current Semester:</h4>
+        <h1 class="">Fall 2017</h1>
+      </div>
+      <div class="enrolled-Credit-Hours">
+        <h4 class="">Enrolled Credit Hours:</h4>
+        <h1 class="">15</h1>
+      </div>
+      <div class="academic-Standing">
+        <h4 class="">Academic Standing</h4>
+        <h1 class="">Good</h1>
+      </div>
+      <div class="page-Breaks"></div>
+    </section>
 
-      <aside class="aside">
-        <h1 class="">Benedict Cumberbatch</h1>
-        <h5 class="">Academic Services</h5>
-        <ul>
-          <li class="">Current Schedule</li>
-          <li class="">Grades &amp; Reporting</li>
-          <li class="">Upcoming Courses</li>
-        </ul>
-        <h5 class="">College Information</h5>
-        <ul>
-          <li class="">College Calender</li>
-          <li class="">Financial Aid</li>
-          <li class="">Student Services</li>
-        </aside>
+    <aside class="aside">
+      <h1 class="">Benedict Cumberbatch</h1>
+      <h5 class="">Academic Services</h5>
+      <ul>
+        <li class="">Current Schedule</li>
+        <li class="">Grades &amp; Reporting</li>
+        <li class="">Upcoming Courses</li>
+      </ul>
+      <h5 class="">College Information</h5>
+      <ul>
+        <li class="">College Calender</li>
+        <li class="">Financial Aid</li>
+        <li class="">Student Services</li>
+      </aside>
 
-        <div class="upcoming-Courses">
-          <h1 class="">Upcoming Courses:</h1>
-        </div>
-        <div class="semester">
-          <p>Semester:</p><p>Spring 2018</p>
-        </div>
+      <div class="upcoming-Courses">
+        <h1 class="">Upcoming Courses:</h1>
+      </div>
+      <div class="semester">
+        <p>Semester:</p><p>Spring 2018</p>
+      </div>
 
+      <div class="white-Box">
         <section class="no-Classes-Registered">
-          <div class="white-Box">
-            <div class="">
-              <h4 class="">YOU CURRENTLY HAVE NO REGISTERED COURSES</h4>
-              <h1 class="">Register For Spring Courses.</h1>
-            </div>
-            <div class="start-Button">
-              <button>START</button>
-            </div>
+          <div class="">
+            <h4 class="">YOU CURRENTLY HAVE NO REGISTERED COURSES</h4>
+            <h1 class="">Register For Spring Courses.</h1>
+          </div>
+          <div class="start-Button">
+            <button>START</button>
           </div>
         </section>
-      </section>
-          <script src="javascript/counter.js" type="text/javascript"></script>
-        </body>
-        </html>
+
+        <section class="schedule-Geneds">
+
+        </section>
+
+        <section class="">
+          <h4 class="">Course Registration Completion:</h4>
+          <div class="">50%</div>
+          <div class="completion-Bar"></div>
+          <h4 class="">Core Program Courses:</h4>
+          <!-- Use of Possible input tag here. Come back for later review -->
+          <div class="option-One">
+            <h4 class="">CSET 155</h4>
+            <h3 class="">Database Design</h3>
+          </div>
+
+          <div class="option-Two">
+            <h4 class="">CSET 160</h4>
+            <h3 class="">Web Development II</h3>
+          </div>
+
+          <div class="option-Three">
+            <h4 class="">CSET 170</h4>
+            <h3 class="">Security &amp; Proffesional Ethics</h3>
+          </div>
+
+          <div class="option-Four">
+            <h4 class="">CSET 180</h4>
+            <h3 class="">Software Project II</h3>
+          </div>
+
+          <div class="get-Help-Button">
+            <p>Get Help »</p>
+          </div>
+        </section>
+
+      </div>
+      <!-- Another button tag may be used here. Return later to make a button and mate with a script if needed. -->
+
+      <div class="next-Button">
+        <p>NEXT »</p>
+      </div>
+    </section>
+
+    <section class="">
+
+
+    </section>
+    <script src="javascript/counter.js" type="text/javascript"></script>
+  </body>
+  </html>
