Gen Eds part of upcoming courses finished.

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -67,9 +67,58 @@
           </div>
         </section>
 
-        <section class="schedule-Geneds">
-          
+        <section class="upc-Schedule-Geneds">
+          <h4 class="">Course Registration Completion:</h4>
+          <div class="">60%</div>
+          <div class="completion-Bar"></div>
+
+          <h4 class="">General Education</h4>
+          <div class="general-Option">
+            <div class="gen-Eds-Selection">
+              <ol>
+                <li>Computer Information Systems</li>
+                <li>English</li>
+                <li>History</li>
+                <li>Mathematics</li>
+                <li>Physical Education and Health</li>
+                <li>Science</li>
+                <li>Social Sciences</li>
+              </ol>
+          </div>
+          <div class="arrows-On-The-Rye">
+            <ol>
+              <li>></li>
+              <li>></li>
+              <li>></li>
+              <li>></li>
+              <li>></li>
+              <li>></li>
+              <li>></li>
+            </ol>
+            <!-- Comeback later to make the top two arrows selectable links. -->
+          </div>
         </section>
+
+        <section class="">
+          <h4 class="">Course Registration Completion:</h4>
+          <div class="">50%</div>
+          <div class="completion-Bar"></div>
+          <h4 class="">Core Program Courses:</h4>
+          <!-- Use of Possible input tag here. Come back for later review -->
+          <div class="option-One">
+            <h4 class="">CSET 155</h4>
+            <h3 class="">Database Design</h3>
+          </div>
+
+          <div class="option-Two">
+            <h4 class="">CSET 160</h4>
+            <h3 class="">Web Development II</h3>
+          </div>
+
+          <div class="option-Three">
+            <h4 class="">CSET 170</h4>
+            <h3 class="">Security &amp; Proffesional Ethics</h3>
+          </div>
 
         <section class="">
           <h4 class="">Course Registration Completion:</h4>
