added classes to aside and began to move things around

--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
   <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
 
     <section class="aside">
-      <h1 class="">Benedic Cumberbatch</h1>
-      <h5 class="">Academic Services></h5>
+      <h1 class="profile-Name">Benedic Cumberbatch</h1>
+      <h5 class="aside-Titles">Academic Services</h5>
       <ul>
-        <li class="">Current Schedule</li>
-        <li class="">Grades &amp; Reporting</li>
-        <li class="">Upcoming Courses</li>
+        <li class="aside-Options">Current Schedule</li>
+        <li class="aside-Options">Grades &amp; Reporting</li>
+        <li class="aside-Options">Upcoming Courses</li>
       </ul>
-      <h5 class="">College Information</h5>
+      <h5 class="aside-Titles">College Information</h5>
       <ul>
-        <li class="">College Calendar</li>
-        <li class="">Financial Aid</li>
-        <li class="">Student Services</li>
+        <li class="aside-Options">College Calendar</li>
+        <li class="aside-Options">Financial Aid</li>
+        <li class="aside-Options">Student Services</li>
       </ul>
     </section>
     <!-- This section comprises of the program announcements and due dates in the top part of the scrolling section. -->
