Placed about 1/2 of the classes into the grades and Reporting page of our project.

--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Home</title>
+  <title>Grades&amp;Reporting</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 </head>
@@ -11,12 +11,12 @@
   <section class="desktop-background">
     <!-- A header is used for the home name -->
     <header class="">
-      <!-- The empty h4 is for the current date through javascript.-->
-      <h4 class=""></h4>
-      <h4 class="">Home/Grades&amp;Reporting</h4>
+      <h4 class="header-Title-Text">Home/Grades&amp;Reporting</h4>
       <!--Javascript date will go below-->
-      <h4 class="">Date</h4>
-      <h4 class="">Log Out?</h4>
+      <ul class="date-Log-Out">
+      <li class="header-Date-Text">Date</li>
+      <li class="header-Date-Text">Log Out?</li>
+      </ul>
       <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
       <div class="page-Breaks"></div>
     </header>
@@ -24,46 +24,46 @@
     <section class="hero-Content">
       <!-- Each div is used to contain the headings as they need to be side by side of eachother in a non listed form. -->
       <div class="current-Program">
-        <h4 class="">Current Program:</h4>
-        <h1 class="">Computer Software Engineering Technology></h1>
+        <h4 class="content-Title-Text">Current Program:</h4>
+        <h1 class="content-Subtitle-Text">Computer Software Engineering Technology></h1>
       </div>
       <div class="current-Semester">
-        <h4 class="">Current Semester:</h4>
-        <h1 class="">Fall 2017</h1>
+        <h4 class="content-Title-Text">Current Semester:</h4>
+        <h1 class="content-Subtitle-Text">Fall 2017</h1>
       </div>
       <div class="enrolled-Credit-Hours">
-        <h4 class="">Enrolled Credit Hours:</h4>
-        <h1 class="">15</h1>
+        <h4 class="content-Title-Text">Enrolled Credit Hours:</h4>
+        <h1 class="content-Subtitle-Text">15</h1>
       </div>
       <div class="academic-Standing">
-        <h4 class="">Academic Standing</h4>
-        <h1 class="">Good</h1>
+        <h4 class="content-Title-Text">Academic Standing</h4>
+        <h1 class="content-Subtitle-Text">Good</h1>
       </div>
       <div class="page-Breaks"></div>
     </section>
     <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
-    <aside class="">
-      <h1 class="">Benedic Cumberbatch</h1>
-      <h5 class="">Academic Services></h5>
+    <section class="aside">
+      <h1 class="profile-Name">Benedic Cumberbatch</h1>
+      <h5 class="aside-Titles">Academic Services</h5>
       <ul>
-        <li class="">Current Schedule</li>
-        <li class="">Grades &amp; Reporting</li>
-        <li class="">Upcoming Courses</li>
+        <li class="aside-Options">Current Schedule</li>
+        <li class="aside-Options">Grades &amp; Reporting</li>
+        <li class="aside-Options">Upcoming Courses</li>
       </ul>
-      <h5 class="">College Information</h5>
+      <h5 class="aside-Titles">College Information</h5>
       <ul>
-        <li class="">College Calendar</li>
-        <li class="">Financial Aid</li>
-        <li class="">Student Services</li>
+        <li class="aside-Options">College Calendar</li>
+        <li class="aside-Options">Financial Aid</li>
+        <li class="aside-Options">Student Services</li>
       </ul>
-    </aside>
+    </section>
 
     <section class="scrolling-Content">
       <!-- This section consists of the course information -->
         <!-- Half of this page is connected to a div container so they are easy to seperate -->
-        <div class="">
-          <h4 class="">Enrolled Courses:</h4>
-          <h4 class="">CSET 105, M, 12:00pm - 4:30pm</h4>
+        <div class="enrolled-Courses">
+          <h4 class="content-Title-Text">Enrolled Courses:</h4>
+          <h4 class="hero-Title-Text">CSET 105, M, 12:00pm - 4:30pm</h4>
           <h1 class="">Into to Web Applications</h1>
           <!-- The grade is given a white background to work inside of -->
           <div class="grade-Background">
