added the circle to the aside

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
 
     <section class="aside">
+      <div class="circle"></div>
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
       <h5 class="aside-Titles">Academic Services</h5>
       <ul>
